--- a/WebVisualizations/css/responsive.css
+++ b/WebVisualizations/css/responsive.css
@@ -41,11 +41,16 @@ body {
     background-color: #30475e;
 }
 
+/* Container Fluid */
+.container-fluid {
+    margin-top: 75px;
+    margin-bottom: 75px;
+}
+
 /* Container */
 .container {
     background-color: #ececec;
-    margin-top: 50px;
-    padding: 0px 45px 45px 45px;
+    padding: 0px 45px 25px 45px;
 }
 
 /* Header */
@@ -62,9 +67,7 @@ header {
 /* Horizontal Rule */  
 hr {
 border: 1px solid #f2a365;
-margin-right: 15px;
-margin-left: 15px;
-margin-bottom: 0px;
+margin: 0px 15px 20px 15px;
 }
 
 /* Text Class: Add to format text */
@@ -74,10 +77,46 @@ margin-bottom: 0px;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
-    margin: 25px auto 25px auto;
+    margin: 25px 15px 25px 15px;
 }
 
 /* Image */
-img {
-    padding: 0px 15px 0px 15px;
+.img-right {
+    padding: 25px 15px 25px 15px;
+}
+
+/* Image Float */
+.img-float {
+    float: left;
+    padding: 25px 15px 25px 15px;
+    width: initial;
+    height: initial;
+}
+
+@media (max-width: 576px) {
+    header {
+        font-size: 25px;
+    }
+
+    .img-float {
+        padding: 25px 15px 25px 15px;
+    }
+}
+
+@media (max-width: 992px) {
+    header {
+        font-size: 35px;
+    }
+
+    .container {
+        margin: 5px 5px 5px 5px;
+    }
+
+    .img-float {
+        padding: 25px 15px 25px 15px;
+    }
+
+    .text {
+        font-size: 20px;
+    }
 }
