--- a/WebVisualizations/css/responsive.css
+++ b/WebVisualizations/css/responsive.css
@@ -10,8 +10,12 @@
 .navbar-brand {
     font-size: xx-large;
     letter-spacing: 1px;
-    color: #ececec;
     font-family: 'Montserrat', sans-serif;
+}
+
+/* Page Name: color */
+.navbar-dark .navbar-brand {
+    color: #ececec;
 }
 
 /* Menu Items: top right */
@@ -76,7 +80,7 @@ margin: 0px 15px 20px 15px;
     font-family: 'Lora', serif;
     font-size: 25px;
     font-weight: 500;
-    text-align: left;
+    text-align: justify;
     margin: 25px 15px 25px 15px;
 }
 
@@ -88,22 +92,14 @@ margin: 0px 15px 20px 15px;
 /* Image Float */
 .img-float {
     float: left;
-    padding: 25px 15px 25px 15px;
+    padding: 25px 40px 25px 15px;
     width: 383px;
     height: 285.328px;
 }
 
-@media (max-width: 576px) {
-    header {
-        font-size: 25px;
-    }
-
-    .img-float {
-        padding: 25px 15px 25px 15px;
-    }
-}
-
+/* When screen resolution less than 992px */
 @media (max-width: 992px) {
+
     header {
         font-size: 35px;
     }
@@ -112,11 +108,54 @@ margin: 0px 15px 20px 15px;
         margin: 5px 5px 5px 5px;
     }
 
-    .img-float {
-        padding: 25px 15px 25px 15px;
+    .text {
+        font-size: 20px;
+    }
+
+    .navbar-dark .navbar-brand {
+        color: #ececece7;
+    }
+
+    .dropdown-menu {
+        background-color: #ececece7;
+    }
+    
+    .dropdown-menu a:hover{
+        background-color: rgba(202, 62, 62, .35);
+    }
+
+    .bg-dark {
+        background-color: #313131 !important;
+    }
+
+    body {
+        background-color: #414141;
+    }
+
+    .container {
+        background-color: #525252;
     }
 
     .text {
-        font-size: 20px;
+        color: #ececece7;
+        font-weight: 300;
+    }
+
+    header {
+        color: #ececece7;
+    }
+
+    hr {
+        border: 1px solid #ca3e3e;
+    }
+}
+
+@media (max-width: 576px) {
+    header {
+        font-size: 25px;
+    }
+
+    .navbar-brand {
+        font-size: x-large;
     }
 }
