--- a/WebVisualizations/css/style.css
+++ b/WebVisualizations/css/style.css
@@ -28,6 +28,7 @@
 .dropdown-item {
     font-family: 'Montserrat', sans-serif;
     font-size: 17px;
+    color: #222831;
 }
 
 /* Menu Items > Dropdown Menu */
@@ -47,14 +48,32 @@ body {
 
 /* Container Fluid */
 .container-fluid {
-    margin-top: 75px;
-    margin-bottom: 75px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 /* Container */
 .container {
     background-color: #ececec;
     padding: 0px 45px 25px 45px;
+    margin: 0px auto 0px auto;
+}
+
+/* Container with content fit for height */
+.container-fit {
+    height: fit-content;
+}
+
+/* Container: comparison page */
+.container-compare {
+    background-color: #ececec;
+    padding: 0px 50px 60px 50px;
+    margin: 50px auto 50px auto;
+}
+
+.container-data {
+    margin-top: 50px;
+    padding: 0;
 }
 
 /* Header */
@@ -68,33 +87,87 @@ header {
     margin: 25px auto 25px auto;
 }
 
+/* Change font size of header for Visualizations */
+.header-small {
+    font-size: 35px;
+}
+
 /* Horizontal Rule */  
 hr {
 border: 1px solid #f2a365;
 margin: 0px 15px 20px 15px;
 }
 
-/* Text Class: Add to format text */
+/* Hidden hr to display at smaller resolution on Comparison page */
+.hidden-hr {
+    display: none;
+}
+
+/* Holds the common text attributes */
 .text {
     color: #222831;
     font-family: 'Lora', serif;
-    font-size: 25px;
     font-weight: 500;
-    text-align: justify;
-    margin: 25px 15px 25px 15px;
 }
 
-/* Image */
+/* Text formatting for any page */
+.text-style {
+    font-size: 20px;
+    text-align: center;
+}
+
+/* Add to format text as justified */
+.text-justify {
+    font-size: 25px;
+    text-align: justify;
+    margin: 25px 15px 0px 15px;
+}
+
+/* Add to format text as centered */
+.text-center {
+    font-size: 25px;
+    text-align: center;
+    margin: 25px 0px 25px 0px;
+}
+
+/* Set image to be scaled to 100% */
+img {
+    height: 100%;
+    width: 100%;
+}
+
+/* Image: home page, right side */
 .img-right {
     padding: 25px 15px 25px 15px;
 }
 
-/* Image Float */
+/* Scale an image to fit within height */
+.img-scale {
+    max-width: 600px;
+    padding-right: auto;
+}
+
+/* Center the image */
+.img-container {
+    text-align: center;
+}
+
+/* Image: home page, left side */
 .img-float {
     float: left;
     padding: 25px 40px 25px 15px;
     width: 383px;
     height: 285.328px;
+}
+
+/* Image: comparison page */
+.img-compare {
+    padding: 0px 25px 0px 25px;
+}
+
+.img-thumbnail {
+    background-color: transparent;
+    border: 2px solid #222831;
 }
 
 /* When screen resolution less than 992px */
@@ -104,12 +177,13 @@ margin: 0px 15px 20px 15px;
         font-size: 35px;
     }
 
-    .container {
-        margin: 5px 5px 5px 5px;
+    .text-justify {
+        font-size: 20px;
+        font-weight: 300;
     }
 
     .text {
-        font-size: 20px;
+        color: #ececece7;
     }
 
     .navbar-dark .navbar-brand {
@@ -118,6 +192,10 @@ margin: 0px 15px 20px 15px;
 
     .dropdown-menu {
         background-color: #ececece7;
+    }
+
+    .dropdown-item {
+        color: #313131;
     }
     
     .dropdown-menu a:hover{
@@ -136,11 +214,6 @@ margin: 0px 15px 20px 15px;
         background-color: #525252;
     }
 
-    .text {
-        color: #ececece7;
-        font-weight: 300;
-    }
-
     header {
         color: #ececece7;
     }
@@ -148,6 +221,15 @@ margin: 0px 15px 20px 15px;
     hr {
         border: 1px solid #ca3e3e;
     }
+
+    .hidden-hr {
+        display: inherit;
+        margin-top: 50px;
+        margin-bottom: 0px;
+    }
+
+    .img-thumbnail {
+        border: 2px solid #313131;
 }
 
 @media (max-width: 576px) {
@@ -157,5 +239,21 @@ margin: 0px 15px 20px 15px;
 
     .navbar-brand {
         font-size: x-large;
+    }
+
+    .text-justify {
+        font-size: 18px;
+    }
+
+    .text-center {
+        font-size: 18px;
+    }
+
+    .text-style {
+        font-size: 16px;
+    }
+
+    .img-float {
+        margin-left: 18px;
     }
 }
