--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,15 @@ body {
     margin: 50px auto 50px auto;
 }
 
+/* Fit the data into the entire container */
 .container-data {
     margin-top: 50px;
     padding: 0;
+    margin-bottom: 50px;
+}
+
+.table-responsive {
+    margin-bottom: 0;
 }
 
 /* Header */
@@ -114,6 +120,7 @@ margin: 0px 15px 20px 15px;
 .text-style {
     font-size: 20px;
     text-align: center;
+    padding-bottom: 10px;
 }
 
 /* Add to format text as justified */
@@ -170,7 +177,12 @@ img {
     border: 2px solid #222831;
 }
 
-/* When screen resolution less than 992px */
+/* Creates a margin at the bottom */
+.spacing {
+    margin-bottom: 25px;
+}
+
+/* Medium device changes */
 @media (max-width: 992px) {
 
     header {
@@ -222,17 +234,12 @@ img {
         border: 1px solid #ca3e3e;
     }
 
-    .hidden-hr {
-        display: inherit;
-        margin-top: 50px;
-        margin-bottom: 0px;
-    }
-
     .img-thumbnail {
         border: 2px solid #313131;
 }
 
-@media (max-width: 576px) {
+/* Smaller device changes */
+@media (max-width: 768px) {
     header {
         font-size: 25px;
     }
@@ -256,4 +263,11 @@ img {
     .img-float {
         margin-left: 18px;
     }
+
+    .hidden-hr {
+        display: inherit;
+        margin-top: 50px;
+        margin-bottom: 0px;
+    }
+
 }
